# back-tester-2026

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml
bench/: AppBench.cpp  CMakeLists.txt  DataParserBench.cpp  MergerBench.cpp  OrderBookBench.cpp  OrderBookRouterBench.cpp  QueueBench.cpp
cmake/: GlobalSettings.cmake  ThirdPartyLibs.cmake
scripts/: convert_to_feather.py
src/: CMakeLists.txt
src/common/: BasicTypes.hpp  BlockingQueue.hpp  LockFreeQueue.hpp  MarketDataEvent.cpp  MarketDataEvent.hpp  NaiveTimer.cpp  NaiveTimer.hpp  Queue.hpp  QueueBase.hpp
src/ingestion/: CMakeLists.txt  DataParser.cpp  DataParser.hpp  FeatherDataParser.cpp  FeatherDataParser.hpp  FlatMerger.cpp  FlatMerger.hpp  HierarchyMerger.cpp  HierarchyMerger.hpp  IngestionPipeline.cpp  IngestionPipeline.hpp  JsonNativeDataParser.cpp  JsonNativeDataParser.hpp  JsonSimpleDataParser.cpp  JsonSimpleDataParser.hpp  Merger.cpp  Merger.hpp  NativeDataParser.cpp  NativeDataParser.hpp  SimpleDataParser.cpp  SimpleDataParser.hpp
src/main/: CMakeLists.txt  args.cpp  args.hpp  main.cpp
src/order_book/: AbseilOrderBook.cpp  AbseilOrderBook.hpp  CMakeLists.txt  MapOrderBook.cpp  MapOrderBook.hpp  OrderBook.hpp  OrderBookRouter.hpp  ShardedOrderBookRouter.hpp  SimpleOrderBookRouter.hpp
test/: CMakeLists.txt  DataParserTest.cpp  MergerTest.cpp  OrderBookRouterTest.cpp  OrderBookTest.cpp  QueueTest.cpp  TempFile.hpp
test/fixtures/: xeur-eobi-20260309.mbo.json.feather  xeur-eobi-20260310.mbo.json.feather  xeur-eobi-20260311.mbo.json.feather  xeur-eobi-20260312.mbo.json.feather  (+1 more)
